# pico-usb-bulk-echo

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_usb.py
src/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
